u8800: Add libsensors. Add APS-12D light & proximity sensor.
This is the first part of the open source libsensors, with aps-12d
enabled right now.

Notes for aps-12d:
 * Sometimes quirky proximity sensor.
 * Not calibrated light sensor (refer to APSSensor.h).

--- a/ueventd.qcom.rc
+++ b/ueventd.qcom.rc
@@ -121,3 +121,4 @@
 /dev/dvb/adapter0/dvr*    0664   media       media
 /dev/dvb/adapter0/video*  0664   media       media
 
+/dev/aps-12d              0640   system     system
