--- a/ueventd.qcom.rc
+++ b/ueventd.qcom.rc
@@ -122,3 +122,5 @@
 /dev/dvb/adapter0/video*  0664   media       media
 
 /dev/aps-12d              0640   system     system
+/dev/lsm303dlh_acc        0640   system     system
+/dev/lsm303dlh_mag        0640   system     system
