--- a/ueventd.qcom.rc
+++ b/ueventd.qcom.rc
@@ -63,7 +63,7 @@
 /dev/hsicctl1             0640   radio      radio
 /dev/hsicctl2             0640   radio      radio
 /dev/hsicctl3             0640   radio      radio
-/dev/oncrpc/*             0640   radio      radio
+/dev/oncrpc/*             0660   system     radio
 /dev/video*               0660   system     camera
 /dev/media*               0660   system     camera
 /dev/v4l-subdev*          0660   system     camera
