--- a/init.qcom.rc
+++ b/init.qcom.rc
@@ -36,6 +36,7 @@ on init
     mkdir /storage 0550 system sdcard_r
     mkdir /storage/emulated 0000 root root
     mkdir /storage/sdcard1 0000 system system
+    mkdir /storage/usbdisk 0000 system system
 
     export EXTERNAL_STORAGE /storage/emulated/legacy
     export SECONDARY_STORAGE /storage/sdcard1
@@ -47,6 +48,8 @@ on init
     symlink /storage/emulated/legacy /mnt/sdcard
     symlink /storage/emulated/legacy /storage/sdcard0
     symlink /mnt/shell/emulated/0 /storage/emulated/legacy
+    symlink /storage/usbdisk /usbdisk
+    symlink /storage/usbdisk /mnt/usbdisk
 
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
