DeviceSettings: Add vibration intensity setting.
Also, modify the context usage upon restoring audio settings, now it will
write the value on startup even though the property itself is set across reboot.

--- a/init.target.rc
+++ b/init.target.rc
@@ -41,6 +41,7 @@ on boot
 on init
     # Device Settings
     chown system system /sys/devices/platform/msm_otg/mode
+    chown system system /sys/class/timed_output/vibrator/voltage_level
 
 on property:hw.keyboard.disable=1
     write  /sys/bus/platform/devices/pm8058-keypad/disable_kp 1
