sensors: Add dynamic calibration for LSM303DLH magnetic sensor.
The readings can be different from device to device and the position of earth.
Implement dynamic calibration, which saves and reads values from
/data/misc/sensors/lsm303dlh_mag .

--- a/init.target.rc
+++ b/init.target.rc
@@ -32,6 +32,9 @@ on init
     chown system system /sys/devices/platform/msm_otg/mode
     chown system system /sys/class/timed_output/vibrator/voltage_level
 
+on post-fs-data
+    mkdir /data/misc/sensors 0770 system system
+
 on property:sys.radio.shutdown=true
    exec /system/bin/sh /system/etc/init.qcom.efs.sync.sh
 
