--- a/init.emmc.rc
+++ b/init.emmc.rc
@@ -1,3 +1,5 @@
 on emmc-fs
     mount_all ./fstab.u8800
     setprop ro.crypto.fuse_sdcard true
+
+    mount vfat /dev/block/platform/msm_sdcc.2/by-num/p1 /cust ro
