--- a/init.qcom.usb.rc
+++ b/init.qcom.usb.rc
@@ -26,7 +26,11 @@
 #
 
 on init
+    write /sys/class/android_usb/android0/f_rndis/manufacturer Huawei
+    write /sys/class/android_usb/android0/f_rndis/vendorID 12d1
     write /sys/class/android_usb/android0/f_rndis/wceis 1
+
+on boot
     write /sys/class/android_usb/android0/iSerial ${ro.serialno}
     write /sys/class/android_usb/android0/iManufacturer ${ro.product.manufacturer}
     write /sys/class/android_usb/android0/iProduct ${ro.product.model}
