DeviceSettings: Show ongoing notification when USB Host mode is on.
USB Host mode should be turned off whenever possible, since it consumes battery
& the phone is not allowed to sleep. Also, when Host mode is on, the phone
cannot be connected as peripheral to PC, leaving the user in confusion.

--- a/DeviceSettings/AndroidManifest.xml
+++ b/DeviceSettings/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <receiver android:name="com.cyanogenmod.settings.device.Startup">
             <intent-filter android:priority="100">
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="com.cyanogenmod.settings.device.usb_host"/>
             </intent-filter>
         </receiver>
     </application>
