u8800: Add support for Torch.
With variable brightness setting.

--- a/init.qcom.rc
+++ b/init.qcom.rc
@@ -82,6 +82,9 @@ on boot
     # Allow QMUX daemon to assign port open wait time
     chown radio radio /sys/devices/virtual/hsicctl/hsicctl0/modem_wait
 
+    chown system system /sys/class/leds/flashlight/brightness
+    chmod 0666 /sys/class/leds/flashlight/brightness
+
     setprop wifi.interface wlan0
 
     setprop ro.telephony.call_ring.multiple false
