--- a/ueventd.qcom.rc
+++ b/ueventd.qcom.rc
@@ -25,21 +25,14 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-# the DIAG device node is not world writable/readable.
-/dev/diag                 0660   system     qcom_diag
-
+/dev/diag                 0660   radio      radio
 /dev/genlock              0666   system     system
 /dev/kgsl                 0666   system     system
 /dev/kgsl-3d0             0666   system     system
-/dev/kgsl-2d0             0666   root       root
-/dev/kgsl-2d1             0666   root       root
+/dev/kgsl-2d0             0666   system     system
 /dev/ion                  0664   system     system
 /dev/rtc0                 0600   system     system
 /dev/smd0                 0660   system     system
-/dev/smd4                 0660   system     system
-/dev/smd_cxm_qmi          0640   radio      radio
-/dev/smd7                 0660   bluetooth  bluetooth
-/dev/rfcomm0              0660   bluetooth  bluetooth
 /dev/smdcntl0             0640   radio      radio
 /dev/smdcntl1             0640   radio      radio
 /dev/smdcntl2             0640   radio      radio
@@ -48,41 +41,15 @@
 /dev/smdcntl5             0640   radio      radio
 /dev/smdcntl6             0640   radio      radio
 /dev/smdcntl7             0640   radio      radio
-/dev/smuxctl32            0640   radio      radio
-/dev/sdioctl0             0640   radio      radio
-/dev/sdioctl1             0640   radio      radio
-/dev/sdioctl2             0640   radio      radio
-/dev/sdioctl3             0640   radio      radio
-/dev/sdioctl4             0640   radio      radio
-/dev/sdioctl5             0640   radio      radio
-/dev/sdioctl6             0640   radio      radio
-/dev/sdioctl7             0640   radio      radio
-/dev/sdioctl8             0640   radio      radio
 /dev/rmnet_mux_ctrl       0640   radio      radio
-/dev/hsicctl0             0640   radio      radio
-/dev/hsicctl1             0640   radio      radio
-/dev/hsicctl2             0640   radio      radio
-/dev/hsicctl3             0640   radio      radio
 /dev/oncrpc/*             0660   system     radio
-/dev/video*               0660   system     camera
-/dev/media*               0660   system     camera
-/dev/v4l-subdev*          0660   system     camera
-/dev/qseecom              0660   system     drmrpc
 /dev/gemini0              0660   system     camera
-/dev/jpeg0                0660   system     camera
-/dev/jpeg1                0660   system     camera
-/dev/jpeg2                0660   system     camera
 /dev/msm_camera/*         0660   system     camera
-/dev/gemini/              0660   system     camera
-/dev/mercury0             0660   system     camera
 /dev/msm_vidc_reg         0660   system     audio
 /dev/msm_vidc_dec         0660   system     audio
 /dev/msm_vidc_dec_sec     0660   system     audio
 /dev/msm_vidc_enc         0660   system     audio
 /dev/msm_rotator          0664   system     system
-/dev/hw_random            0660   system     system
-
-#permissions for audio
 /dev/msm_qcelp            0660   system     audio
 /dev/msm_evrc             0660   system     audio
 /dev/msm_wma              0660   system     audio
@@ -102,24 +69,10 @@
 /dev/msm_fm               0660   system     audio
 /dev/msm_mvs              0660   system     audio
 /dev/msm_pcm_lp_dec       0660   system     audio
-/dev/msm_preproc_ctl      0660   system     audio
-/dev/msm_rtac             0660   system     audio
-/dev/msm_voicememo        0660   system     audio
-/dev/radio0               0640   fm_radio   fm_radio
-/dev/smd3                 0660   bluetooth  bluetooth
-/dev/smd2                 0660   bluetooth  bluetooth
-/dev/ttyHSL1              0660   system     system
-/dev/mdm                  0660   system     radio
-/sys/devices/virtual/smdpkt/smdcntl*       open_timeout   0664 radio radio
-/dev/sdio_tty_ciq_00      0660   system     system
-/dev/tty_sdio_00          0660   system     system
-/dev/ttyGS0               0660   system     system
-/dev/i2c-5                0660   media       media
+/dev/radio0               0660   system     system
+/dev/ttyHS0               0600   bluetooth  bluetooth
 
-# DVB devices
-/dev/dvb/adapter0/demux*  0444   media       media
-/dev/dvb/adapter0/dvr*    0664   media       media
-/dev/dvb/adapter0/video*  0664   media       media
+/sys/devices/virtual/smdpkt/smdcntl*       open_timeout   0664 radio radio
 
 /dev/aps-12d              0640   system     system
 /dev/lsm303dlh_acc        0640   system     system
