--- a/init.qcom.rc
+++ b/init.qcom.rc
@@ -27,6 +27,10 @@
 
 import init.qcom.usb.rc
 
+on early-init
+    mount debugfs debugfs /sys/kernel/debug
+    chown system system /sys/kernel/debug/kgsl/proc
+
 on init
     # See storage config details at http://source.android.com/tech/storage/
     mkdir /mnt/media_rw/sdcard0 0700 media_rw media_rw
