--- a/recovery/init.recovery.qcom.rc
+++ b/recovery/init.recovery.qcom.rc
@@ -27,5 +27,12 @@
 #
 #
 
-service rmt_storage /sbin/rmt_storage /dev/block/mmcblk0p10 /dev/block/mmcblk0p11
+on boot
+    # Disable frambuffer alignment
+    write /sys/module/msm_fb/parameters/align_buffer 0
 
+    # Set brightnes for LCD and buttons
+    write /sys/class/leds/lcd-backlight/brightness 127
+    write /sys/class/leds/button-backlight/brightness 127
+
+service rmt_storage /sbin/rmt_storage
