--- a/ueventd.qcom.rc
+++ b/ueventd.qcom.rc
@@ -25,7 +25,7 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-/dev/diag                 0660   radio      radio
+/dev/diag                 0660   radio      audio
 /dev/genlock              0666   system     system
 /dev/kgsl                 0666   system     system
 /dev/kgsl-3d0             0666   system     system
