u8800: Add support for FM Radio.

--- a/init.qcom.rc
+++ b/init.qcom.rc
@@ -188,6 +188,13 @@ service iprenew_bt-pan /system/bin/dhcpcd -n
     disabled
     oneshot
 
+service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
+    class late_start
+    user root
+    group system qcom_oncrpc
+    disabled
+    oneshot
+
 service charger /charger
     class charger
 
