--- a/init.qcom.rc
+++ b/init.qcom.rc
@@ -46,6 +46,7 @@ on init
     export SECONDARY_STORAGE /storage/sdcard1:/storage/usbdisk0
 
 on fs
+    mkdir /cust
     mount_all ./fstab.qcom
 
 on early-boot
