--- a/configs/audio_policy.conf
+++ b/configs/audio_policy.conf
@@ -1,7 +1,3 @@
-#
-# Audio policy configuration for generic device builds (goldfish audio HAL - emulator)
-#
-
 # Global configuration section: lists input and output devices always present on the device
 # as well as the output device selected by default.
 # Devices are designated by a string that corresponds to the enum in audio.h
@@ -27,7 +23,7 @@ audio_hw_modules {
   primary {
     outputs {
       primary {
-        sampling_rates 44100
+        sampling_rates 44100|48000
         channel_masks AUDIO_CHANNEL_OUT_STEREO
         formats AUDIO_FORMAT_PCM_16_BIT
         devices AUDIO_DEVICE_OUT_SPEAKER|AUDIO_DEVICE_OUT_EARPIECE|AUDIO_DEVICE_OUT_WIRED_HEADSET|AUDIO_DEVICE_OUT_WIRED_HEADPHONE|AUDIO_DEVICE_OUT_ALL_SCO|AUDIO_DEVICE_OUT_AUX_DIGITAL|AUDIO_DEVICE_OUT_FM|AUDIO_DEVICE_OUT_FM_TX
@@ -56,31 +52,20 @@ audio_hw_modules {
         devices AUDIO_DEVICE_IN_BUILTIN_MIC|AUDIO_DEVICE_IN_WIRED_HEADSET|AUDIO_DEVICE_IN_BLUETOOTH_SCO_HEADSET|AUDIO_DEVICE_IN_AUX_DIGITAL|AUDIO_DEVICE_IN_VOICE_CALL|AUDIO_DEVICE_IN_FM_RX|AUDIO_DEVICE_IN_FM_RX_A2DP
       }
       voipin {
-        sampling_rates 8000|16000
+        sampling_rates 8000|11025|12000|16000|22050|24000|32000|44100|48000
         channel_masks AUDIO_CHANNEL_IN_MONO
         formats AUDIO_FORMAT_PCM_16_BIT|AUDIO_FORMAT_AMR_NB|AUDIO_FORMAT_AMR_WB|AUDIO_FORMAT_QCELP|AUDIO_FORMAT_EVRC|AUDIO_FORMAT_EVRCB|AUDIO_FORMAT_EVRCWB
         devices AUDIO_DEVICE_IN_COMMUNICATION
       }
     }
   }
- a2dp {
+  a2dp {
     outputs {
-      primary {
-        sampling_rates 48000
-        channel_masks AUDIO_CHANNEL_OUT_STEREO
-        formats AUDIO_FORMAT_PCM_16_BIT
-        devices AUDIO_DEVICE_OUT_ALL_A2DP
-        flags AUDIO_OUTPUT_FLAG_PRIMARY
-      }
-    }
-  }
- usb {
-    outputs {
-      usb_accessory {
+      a2dp {
         sampling_rates 44100
         channel_masks AUDIO_CHANNEL_OUT_STEREO
         formats AUDIO_FORMAT_PCM_16_BIT
-        devices AUDIO_DEVICE_OUT_USB_ACCESSORY
+        devices AUDIO_DEVICE_OUT_ALL_A2DP
       }
     }
   }
