--- a/init.qcom.rc
+++ b/init.qcom.rc
@@ -86,6 +86,8 @@ on boot
     write /sys/kernel/mm/ksm/sleep_millisecs 500
     write /sys/kernel/mm/ksm/run 1
 
+    write /proc/sys/vm/page-cluster 0
+
 # msm specific files that need to be created on /data
 on post-fs-data
     # Create the directories used by the Wireless subsystem
