u8800: Add legacy symlink for external SD.
Some apps still rely on old paths. Make it available.

--- a/init.qcom.rc
+++ b/init.qcom.rc
@@ -45,6 +45,9 @@ on init
     export EXTERNAL_STORAGE /storage/sdcard0
     export SECONDARY_STORAGE /storage/sdcard1:/storage/usbdisk0
 
+    symlink /storage/sdcard0 /sdcard
+    symlink /storage/sdcard0 /mnt/sdcard
+
 on fs
     mkdir /cust
     mount_all ./fstab.qcom
